Refactor TabCompleteUtilTest based on review feedback
Updated TabCompleteUtilTest to use List.of() instead of Arrays.asList() and Collections.emptyList() for better readability and immutability.
Also refactored assertions to use direct list comparisons (e.g. assertEquals(List.of("apple", "apricot"), result)) to explicitly verify the order and content of the filtered lists, replacing the previous combination of size and contains checks.
Restored existing tests for `getOnlinePlayerNames` using Mockito that were accidentally removed in previous commits, ensuring the full test suite runs.